fix: dropdown z-index

--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ header {
 .header-nav__link-container:nth-child(2):hover .content-catalog__ul{
   display: block;
   position: absolute;
+  z-index: 1;
   background-color: white;
   padding: 0;
   margin: 35px 0;
